🔨fix: flex wrap alignment
#11  Fixed

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -217,8 +217,7 @@ li {
 	margin: 0;
 	padding: 0;
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
+	flex-wrap: wrap; 
 }
 
 .more-page li {
